@@ -1,0 +1,2 @@
+<h1>Cliente#logout</h1>
+<p>Find me in app/views/cliente/logout.html.erb</p>
