@@ -28,6 +28,10 @@
     <%= select("hospede","estCivil", Hospede.estadosCivis , {} , { :new => nil }) %>
   </p>
   <p>
+    <%= f.label :email, 'E-mail'%><br />
+    <%= f.text_field :email %>
+  </p>
+  <p>
     <%= f.submit "Atualizar" %>
   </p>
 <% end %>
