@@ -1,6 +1,8 @@
 <% content_for :menu do %>
 <% end %>
 
-<p><%= link_to 'Tipos de apartamentos', :controller => "tipoApt", :action => "index" %></p>
+<p><%= link_to 'Tipos de apartamentos', :controller => "tipos_apartamentos", :action => "index" %></p>
+<br><br>
+<p><%= link_to 'Login', :controller => "cliente", :action => "login" %></p>
 
 
